--- a/project.yaml
+++ b/project.yaml
@@ -1,12 +1,79 @@
 version: '3.0'
 
 expectations:
-  population_size: 1000
+  population_size: 10000
 
 actions:
 
-  generate_study_population:
-    run: cohortextractor:latest generate_cohort --study-definition study_definition
+
+
+  ## use the Measure function to allow data for different time periods to be extracted in the same study population:  --index-date-range ""yyyy-mm-dd""   
+  generate_study_population_1:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2015-03-01"
     outputs:
       highly_sensitive:
-        cohort: output/input.csv
+        cohort: output/data/input_all_2015-03-01.csv  
+
+  generate_study_population_2:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2016-03-01"
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_all_2016-03-01.csv  
+
+  generate_study_population_3:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2017-03-01"
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_all_2017-03-01.csv  
+        
+  generate_study_population_4:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2018-03-01"
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_all_2018-03-01.csv  
+        
+        
+  generate_study_population_5:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2019-03-01"
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_all_2019-03-01.csv        
+        
+  generate_study_population_6:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2020-03-01"
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_all_2020-03-01.csv  
+   
+  generate_study_population_7:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_all --output-dir=output/data --index-date-range "2021-03-01"
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_all_2021-03-01.csv  
+ 
+ 
+
+  generate_study_population_ethnicity:
+    run: cohortextractor:latest generate_cohort --study-definition study_definition_ethnicity --output-dir=output/data #--output-format=feather
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input_ethnicity.csv
+        
+      
+        
+        
+        
+  join_ethnicity:
+    run: python:latest python analysis/join_ethnicity.py --output-dir=output/data
+    needs: [generate_study_population_1, generate_study_population_2, generate_study_population_3, generate_study_population_4, generate_study_population_5, generate_study_population_6, generate_study_population_7, generate_study_population_ethnicity]
+    outputs:
+      highly_sensitive:
+        cohort: output/data/input*.csv
+
+
+  generate_BMI_R:
+    run: r:latest analysis/BMI.R --output-dir=output/data
+    needs: [join_ethnicity]
+    outputs:
+      highly_sensitive:
+        cohort: output/data/BMI_complete_categories.csv
