--- a/project.yaml
+++ b/project.yaml
@@ -94,4 +94,5 @@ actions:
         table1: output/data/regression_had_bmi_2020.csv
         table2: output/data/regression_had_bmi_2021.csv
         table3: output/data/multivariate_regression_had_bmi_2020.csv
+        table4: output/data/multivariate_regression_had_bmi_2021.csv
 
