--- a/project.yaml
+++ b/project.yaml
@@ -70,11 +70,16 @@ actions:
 
 
 
-  
-  generate_BMI_complete_categories:
-    run: r:latest analysis/BMI.R --output-dir=output/data
+  generate_BMI_2015_data:
+    run: r:latest analysis/BMI_2015.R --output-dir=output/data
     needs: [join_ethnicity]
     outputs:
       highly_sensitive:
-        cohort1: output/data/BMI_complete_categories.csv
-        cohort2: output/data/BMI_complete_long.csv
+        cohort1: output/data/BMI_complete_median_2015.csv
+        cohort2: output/data/BMI_complete_long_2015.csv
+
+
+
+
+  
+  
