--- a/project.yaml
+++ b/project.yaml
@@ -96,3 +96,13 @@ actions:
         cohort1: output/data/BMI_complete_median_2017.feather
         cohort2: output/data/BMI_complete_long_2017.feather
 
+
+  generate_BMI_2018_data:
+    run: r:latest analysis/BMI_2018.R --output-dir=output/data --output-format feather
+    needs: [join_ethnicity]
+    outputs:
+      highly_sensitive:
+        cohort1: output/data/BMI_complete_median_2018.feather
+        cohort2: output/data/BMI_complete_long_2018.feather
+
+
