--- a/project.yaml
+++ b/project.yaml
@@ -164,3 +164,5 @@ actions:
       moderately_sensitive:
         table1: output/data/regression_had_bmi_2020.csv
         table2: output/data/regression_had_bmi_2021.csv
+        table3: output/data/mutlivariate_regression_had_bmi_2020.csv
+
