--- a/project.yaml
+++ b/project.yaml
@@ -150,6 +150,8 @@ actions:
 
 
 # generate tables of who had a BMI measured
+
+
   generate_had_bmi_summary_stats:
     run: r:latest analysis/had_bmi_regression.R --output-dir=output/data 
     needs: [generate_complete_median_BMI_data]
@@ -160,6 +162,16 @@ actions:
         table3: output/data/multivariate_regression_had_bmi_2020.csv
         table4: output/data/multivariate_regression_had_bmi_2021.csv
 
+ 
+  generate_pre2020_had_bmi_summary_stats:
+    run: r:latest analysis/had_bmi_regression_2019.R --output-dir=output/data 
+    needs: [generate_complete_median_BMI_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/regression_had_bmi_2019.csv
+        table2: output/data/multivariate_regression_had_bmi_2019.csv
+
+ 
  
   # generate summary stats of median BMI by exposures
   generate_median_summary_stats:
