--- a/project.yaml
+++ b/project.yaml
@@ -148,7 +148,7 @@ actions:
  
 
 ##################################################################
-###  HAD_BMI ANALYSIS
+### >> HAD_BMI ANALYSIS
 ######################################################################
 # who had_bmi measured:  univariate and multivariate analysis and tables
   generate_had_bmi_univariate_2019:
@@ -195,9 +195,16 @@ actions:
         table1: output/data/multivariate_regression_had_bmi_2021.csv
 
 
-
-
- 
+######################################################################################
+#>> PROPORTION OBESE ANALYSIS
+######################################################################################
+  
+  generate_obese_multivariate_2019:
+    run: r:latest analysis/obese_regression_2019_multivariate.R --output-dir=output/data 
+    needs: [generate_complete_median_BMI_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/multivariate_regression_obese_2019.csv 
 
 
  
