--- a/project.yaml
+++ b/project.yaml
@@ -198,6 +198,15 @@ actions:
 ######################################################################################
 #>> PROPORTION OBESE ANALYSIS
 ######################################################################################
+  generate_obese_univariate_2019:
+    run: r:latest analysis/obese_regression_2019_univariate.R --output-dir=output/data 
+    needs: [generate_complete_median_BMI_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/regression_obese_2019.csv   
+  
+  
+  
   
   generate_obese_multivariate_2019:
     run: r:latest analysis/obese_regression_2019_multivariate.R --output-dir=output/data 
