--- a/project.yaml
+++ b/project.yaml
@@ -206,8 +206,6 @@ actions:
         table1: output/data/regression_obese_2019.csv   
   
   
-  
-  
   generate_obese_multivariate_2019:
     run: r:latest analysis/obese_regression_2019_multivariate.R --output-dir=output/data 
     needs: [generate_complete_median_BMI_data]
@@ -216,8 +214,24 @@ actions:
         table1: output/data/multivariate_regression_obese_2019.csv 
 
 
+
+  generate_obese_univariate_2020:
+    run: r:latest analysis/obese_regression_2020_univariate.R --output-dir=output/data 
+    needs: [generate_complete_median_BMI_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/regression_obese_2020.csv   
+  
+  
+  generate_obese_multivariate_2020:
+    run: r:latest analysis/obese_regression_2020_multivariate.R --output-dir=output/data 
+    needs: [generate_complete_median_BMI_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/multivariate_regression_obese_2020.csv 
+
  
- 
+ #######################################################################################
   # generate summary stats of median BMI by exposures
   generate_median_summary_stats:
     run: r:latest analysis/BMI_median_summary_stats.R --output-dir=output/data 
