--- a/project.yaml
+++ b/project.yaml
@@ -150,7 +150,7 @@ actions:
 ##############################################################################################
   generate_whole_pop_2019:
     run: r:latest analysis/create_BMI_all_2019.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity, generate_BMI_2020_data]
+    needs: [join_ethnicity, generate_BMI_2019_data]
     outputs:
       highly_sensitive:
         cohort1: output/data/BMI_all_2019.feather    
@@ -164,17 +164,12 @@ actions:
 # who had_bmi measured:  univariate and multivariate analysis and tables
   generate_had_bmi_univariate_2019:
     run: r:latest analysis/had_bmi_regression_2019_univariate.R --output-dir=output/data 
-    needs: [generate_complete_median_BMI_data]
+    needs: [generate_whole_pop_2019]
     outputs:
       moderately_sensitive:
-        table1: output/data/regression_had_bmi_2019.csv
+        table1: output/data/regression2_had_bmi_2019.csv
 
-  generate_had_bmi_univariate_2020:
-    run: r:latest analysis/had_bmi_regression_2020_univariate.R --output-dir=output/data 
-    needs: [generate_complete_median_BMI_data]
-    outputs:
-      moderately_sensitive:
-        table1: output/data/regression_had_bmi_2020.csv
+
         
   
  
