--- a/project.yaml
+++ b/project.yaml
@@ -174,6 +174,13 @@ actions:
       moderately_sensitive:
         table1: output/data/regression2_had_bmi_2019.csv
 
+  generate_had_bmi_univariate_2020:
+    run: r:latest analysis/had_bmi_regression_2020_univariate.R --output-dir=output/data 
+    needs: [generate_whole_pop_2020]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/regression2_had_bmi_2020.csv
+
 
         
   
