--- a/project.yaml
+++ b/project.yaml
@@ -187,6 +187,12 @@ actions:
       moderately_sensitive:
         table1: output/data/proportion_had_bmi_2020.csv
   
+  generate_had_bmi_proportion_2021:
+    run: r:latest analysis/had_bmi_proportions_2021.R --output-dir=output/data 
+    needs: [generate_whole_pop_2021]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/proportion_had_bmi_2021.csv
  
  ######################################################################################
  # >> Median BMI Analysis
