--- a/project.yaml
+++ b/project.yaml
@@ -305,3 +305,11 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/median_range_bmi_2021.csv
+
+## Trajectory analysis
+  generate_bmi_complete_long:
+    run: r:latest analysis/BMI_complete_long.R --output-dir=output/data --output-format feather
+    needs: [generate_imd, generate_BMI_2015_data, generate_BMI_2016_data, generate_BMI_2017_data, generate_BMI_2018_data, generate_BMI_2019_data, generate_BMI_2020_data, generate_BMI_2021_data ]
+    outputs:
+      highly_sensitive:
+        table1: output/data/all_bmi_long.feather
