--- a/project.yaml
+++ b/project.yaml
@@ -329,6 +329,16 @@ actions:
         table2: output/data/proportion_DWMP_eligible_2020.csv
         table3: output/data/proportion_DWMP_eligible_2021.csv
 
+  generate_DWMP_hypertension_proportion:
+    run: r:latest analysis/DWMP_proportion_hypertension.R --output-dir=output/data 
+    needs: [generate_whole_pop_2019,generate_whole_pop_2021, generate_whole_pop_2020]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/proportion_DWMP_hypertension_2019.csv
+        table2: output/data/proportion_DWMP_hypertension_2020.csv
+        table3: output/data/proportion_DWMP_hypertension_2021.csv
+
+
 
 ##################################################################
 ### >> HAD_SBP ANALYSIS
