--- a/project.yaml
+++ b/project.yaml
@@ -338,6 +338,24 @@ actions:
         table2: output/data/proportion_DWMP_hypertension_2020.csv
         table3: output/data/proportion_DWMP_hypertension_2021.csv
 
+  generate_DWMP_t2dm_proportion:
+    run: r:latest analysis/DWMP_proportion_t2dm.R --output-dir=output/data 
+    needs: [generate_whole_pop_2019,generate_whole_pop_2021, generate_whole_pop_2020]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/proportion_DWMP_T2DM_2019.csv
+        table2: output/data/proportion_DWMP_T2DM_2020.csv
+        table3: output/data/proportion_DWMP_T2DM_2021.csv
+
+
+  generate_DWMP_t1dm_proportion:
+    run: r:latest analysis/DWMP_proportion_t1dm.R --output-dir=output/data 
+    needs: [generate_whole_pop_2019,generate_whole_pop_2021, generate_whole_pop_2020]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/proportion_DWMP_T1DM_2019.csv
+        table2: output/data/proportion_DWMP_T1DM_2020.csv
+        table3: output/data/proportion_DWMP_T1DM_2021.csv
 
 
 ##################################################################
