--- a/project.yaml
+++ b/project.yaml
@@ -384,3 +384,20 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/proportion_had_sbp_2021.csv
+
+
+############################################################
+## Hba1c
+##############################################################
+
+  generate_hba1c_2018_2019_data:
+    run: r:latest analysis/hba1c_2018_19.R --output-dir=output/data --output-format feather
+    needs: [join_ethnicity]
+    outputs:
+      highly_sensitive:
+        cohort1: output/data/hba1c_2019_summary.feather
+        cohort2: output/data/hba1c_2018_summary.feather
+        cohort3: output/data/hba1c_2019_long.feather
+        cohort4: output/data/hba1c_2018_long.feather
+        cohort5: output/data/precovid_hba1c_control.feather
+       
