--- a/project.yaml
+++ b/project.yaml
@@ -425,3 +425,10 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/proportion_hba1c_2019.csv
+
+  check_hba1c:
+    run: r:latest analysis/check_hba1c.R --output-dir=output/data --output-format feather
+    needs: [generate_hba1c_2018_2019_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/check_hba1c.csv
