--- a/project.yaml
+++ b/project.yaml
@@ -131,11 +131,13 @@ actions:
 
   generate_BMI_2015_data:
     run: r:latest analysis/BMI_2015.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/BMI_complete_median_2015.feather
         cohort2: output/data/BMI_complete_long_2015.feather
+      moderately_sensitive:
+        table1:  output/data/BMI_data_checks_2015.csv
 
 
   generate_BMI_2016_data:
