update BMI analysis

--- a/project.yaml
+++ b/project.yaml
@@ -142,20 +142,24 @@ actions:
 
   generate_BMI_2016_data:
     run: r:latest analysis/BMI_2016.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/BMI_complete_median_2016.feather
         cohort2: output/data/BMI_complete_long_2016.feather
+      moderately_sensitive:
+        table1:  output/data/BMI_data_checks_2016.csv
 
   
   generate_BMI_2017_data:
     run: r:latest analysis/BMI_2017.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/BMI_complete_median_2017.feather
         cohort2: output/data/BMI_complete_long_2017.feather
+      moderately_sensitive:
+        table1:  output/data/BMI_data_checks_2017.csv
         
    
    
