BMI analysis update

--- a/project.yaml
+++ b/project.yaml
@@ -166,38 +166,46 @@ actions:
    
   generate_BMI_2019_data:
     run: r:latest analysis/BMI_2019.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/BMI_complete_median_2019.feather
         cohort2: output/data/BMI_complete_long_2019.feather
+      moderately_sensitive:
+        table1:  output/data/BMI_data_checks_2019.csv
 
 
   generate_BMI_2021_data:
     run: r:latest analysis/BMI_2021.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/BMI_complete_median_2021.feather
         cohort2: output/data/BMI_complete_long_2021.feather
+      moderately_sensitive:
+        table1:  output/data/BMI_data_checks_2021.csv
 
 
   generate_BMI_2018_data:
     run: r:latest analysis/BMI_2018.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/BMI_complete_median_2018.feather
         cohort2: output/data/BMI_complete_long_2018.feather
+      moderately_sensitive:
+        table1:  output/data/BMI_data_checks_2018.csv
 
 
   generate_BMI_2020_data:
     run: r:latest analysis/BMI_2020.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/BMI_complete_median_2020.feather
         cohort2: output/data/BMI_complete_long_2020.feather
+      moderately_sensitive:
+        table1:  output/data/BMI_data_checks_2020.csv
 
 
 # Append yearly data sets to produce a complete data set for analysis of change in trends
