--- a/project.yaml
+++ b/project.yaml
@@ -266,14 +266,14 @@ actions:
   
   generate_had_bmi_proportion_2020:
     run: r:latest analysis/had_bmi_proportions_2020.R --output-dir=output/data 
-    needs: [generate_whole_pop_2020]
+    needs: [generate_complete_median_BMI_data]
     outputs:
       moderately_sensitive:
         table1: output/data/proportion_had_bmi_2020.csv
   
   generate_had_bmi_proportion_2021:
     run: r:latest analysis/had_bmi_proportions_2021.R --output-dir=output/data 
-    needs: [generate_whole_pop_2021]
+    needs: [generate_complete_median_BMI_data]
     outputs:
       moderately_sensitive:
         table1: output/data/proportion_had_bmi_2021.csv
